[gd_scene load_steps=3 format=3 uid="uid://cytu78s7047jn"]

[ext_resource type="Script" path="res://game_elements/shapes/shape.gd" id="1_t6ded"]
[ext_resource type="Texture2D" uid="uid://cws05hyjdqp3g" path="res://assets/shape_icons/square.png" id="2_geww2"]

[node name="square" type="RigidBody2D"]
script = ExtResource("1_t6ded")
icon = ExtResource("2_geww2")

[node name="collision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)

[node name="replica_arrows" type="Node2D" parent="."]

[node name="shape" type="Polygon2D" parent="."]

[connection signal="child_entered_tree" from="replica_arrows" to="." method="_on_replica_arrows_child_entered_tree"]
[connection signal="child_exiting_tree" from="replica_arrows" to="." method="_on_replica_arrows_child_exiting_tree"]
